--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "require": {
         "silex/silex": "~1.3",
         "twig/twig": ">=1.8,<2.0-dev",
-        "monolog/monolog": ">=1.18.0"
+        "monolog/monolog": ">=1.18.0",
+        "google/photos-library": "^1.1"
     }
 }
