Fix placeholders https issue in chrome

--- a/src/.htaccess
+++ b/src/.htaccess
@@ -18,5 +18,5 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule .* index.php [L,QSA,E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
-php_value upload_max_filesize 8M
-php_value post_max_size 8M
+#php_value upload_max_filesize 8M
+#php_value post_max_size 8M
