Disk provider, php8.3 refacto

--- a/src/.env.example
+++ b/src/.env.example
@@ -4,28 +4,34 @@ ENVIRONMENT="development"
 # DOMAIN of the web application without http(s)://
 DOMAIN="localhost"
 
+# Base path
+BASE_PATH=""
+
 # Geo information
 TIMEZONE="Europe/Tallinn"
 
 LOCALE=""
 LOCALE_FALLBACK=""
 
-# DBMS must be a support PDO Driver
-DB_DBMS=""
-
-DB_HOST=""
-DB_USERNAME=""
-DB_PASSWORD=""
-DB_DATABASE=""
-
-# Mail SMTP information (for PHPMailer)
-MAIL_SMTP_HOST=""
-MAIL_SMTP_USER=""
-MAIL_SMTP_PASSWORD=""
-MAIL_SMTP_PROTOCOL="" # SSL or TLS
-MAIL_SMTP_PORT=""
+ADMIN_USER=
+ADMIN_PASS=
 
 # Flickr API
-FLICKR_TOKEN=""
-FLICKR_KEY=""
-FLICKR_SECRET=""
+FLICKR_ENABLED=false
+FLICKR_KEY=
+FLICKR_SECRET=
+FLICKR_PERMISSION=write
+
+# Local directory
+LOCAL_ENABLED=false
+LOCAL_PATH=/media
+
+# Download
+CURL_REFERER="https://sookoll.ee"
+
+# Database
+DB_HOST=
+DB_PORT=
+DB_NAME=
+DB_USER=
+DB_PASS=
