--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,38 @@
-version: '3'
+version: "3.8"
+
 services:
-  picu:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: picu
-    ports:
-    - 8081:80
-    volumes:
-    # source
-    - ./src:/var/www/html/picu
-    - ./apachelogs:/var/log/apache2
+    php:
+        container_name: picu_php
+        build:
+            context: ./docker/php
+        ports:
+            - '9000:9000'
+        volumes:
+            - ./src:/var/www/picu
+        depends_on:
+            - mariadb
+    nginx:
+        container_name: picu_http
+        image: nginx:latest
+        ports:
+            - '80:80'
+        links:
+            - 'php'
+        volumes:
+            - ./src:/var/www/picu
+            - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+        depends_on:
+            - php
+    mariadb:
+        container_name: picu_db
+        image: mariadb:10.9
+        ports:
+            - '3306:3306'
+        environment:
+            - MYSQL_ROOT_PASSWORD=tiger
+            - MYSQL_DATABASE=picu
+            - MYSQL_USER=picu
+            - MYSQL_PASSWORD=picu
+        volumes:
+            - './docker/dbdata:/var/lib/mysql'
+
