--- a/src/composer.json
+++ b/src/composer.json
@@ -8,8 +8,12 @@
     },
     "require": {
         "php": "^8.1",
+        "ext-curl": "*",
+        "ext-imagick": "*",
         "ext-json": "*",
+        "ext-pdo": "*",
         "bryanjhv/slim-session": "^4.1",
+        "lulco/phoenix": "^2.6",
         "monolog/monolog": "^3.6",
         "php-di/php-di": "^7.0",
         "samwilson/phpflickr": "^5.1",
@@ -17,8 +21,11 @@
         "slim/slim": "4.*",
         "slim/twig-view": "3.x-dev",
         "symfony/cache": "^7.0",
-        "vlucas/phpdotenv": "^5.6",
-        "ext-curl": "*"
+        "vlucas/phpdotenv": "^5.6"
+    }
+    ,
+    "require-dev": {
+        "roave/security-advisories": "dev-latest"
     },
     "autoload": {
         "psr-4": {
