--- a/src/composer.json
+++ b/src/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "sookoll/picu",
+    "version": "2.0.0",
     "description": "Personal photo gallery based on Flickr API private photos",
     "homepage": "https://sookoll.ee/picu",
     "config": {
