Replace nginx to apache

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,5 +1,5 @@
 # ENVIRONMENT must be "development" or "production"
-ENVIRONMENT="development"
+ENVIRONMENT="production"
 
 # DOMAIN of the web application without http(s)://
 DOMAIN="localhost"
@@ -16,15 +16,21 @@ LOCALE_FALLBACK=""
 ADMIN_USER=
 ADMIN_PASS=
 
+# Security key for request private albums
+API_TOKEN=
+
 # Flickr API
 FLICKR_ENABLED=false
 FLICKR_KEY=
 FLICKR_SECRET=
 FLICKR_PERMISSION=write
+FLICKR_IMPORT_MAX=1000
 
 # Local directory
-LOCAL_ENABLED=false
-LOCAL_PATH=/media
+DISK_ENABLED=false
+DISK_GALLERY_PATH=/media/gallery
+DISK_CACHE_PATH=/media/cache
+DISK_IMPORT_MAX=250
 
 # Download
 CURL_REFERER="https://sookoll.ee"
