--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,29 @@
 version: "3.8"
 
 services:
-    php:
-        container_name: picu_php
+    webserver:
+        container_name: picu_web
         build:
             context: ./docker/php
-        ports:
-            - '9000:9000'
-        volumes:
-            - ./src:/var/www/picu
-        depends_on:
-            - mariadb
-    nginx:
-        container_name: picu_http
-        image: nginx:latest
+        restart: 'always'
         ports:
             - '80:80'
         links:
-            - 'php'
+            - database
         volumes:
-            - ./src:/var/www/picu
-            - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-        depends_on:
-            - php
-    mariadb:
+            - ./src:/var/www/html/picu:rw
+            - ./docker/php/php.ini:/usr/local/etc/php/php.ini
+            - ./docker/apache/vhosts:/etc/apache2/sites-enabled
+        environment:
+            APACHE_DOCUMENT_ROOT: /var/www/html
+            MYSQL_ROOT_PASSWORD: tiger
+            MYSQL_USER: picu
+            MYSQL_PASSWORD: picu
+            MYSQL_DATABASE: picu
+            HOST_MACHINE_MYSQL_PORT: 3306
+        extra_hosts:
+            - 'host.docker.internal:host-gateway'
+    database:
         container_name: picu_db
         image: mariadb:10.9
         ports:
