--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,30 +1,92 @@
-FROM php:8.3-fpm
-ARG IMAGICK_VERSION=3.7.0
+FROM php:8.3-apache-bookworm
 
-RUN apt update \
-    && apt install -y zlib1g-dev libicu-dev libzip-dev libcurl3-dev libpng-dev libonig-dev libxml2-dev zip curl wget \
-    && docker-php-ext-install intl opcache curl gd mbstring mysqli pdo pdo_mysql xml bcmath \
-    && pecl install apcu \
-    && docker-php-ext-enable apcu \
-    && docker-php-ext-configure zip \
-    && docker-php-ext-install zip
+# Surpresses debconf complaints of trying to install apt packages interactively
+# https://github.com/moby/moby/issues/4032#issuecomment-192327844
 
-RUN apt install -y libmagickwand-dev
+ARG DEBIAN_FRONTEND=noninteractive
 
-RUN curl -L -o /tmp/imagick.tar.gz https://github.com/Imagick/imagick/archive/refs/tags/${IMAGICK_VERSION}.tar.gz \
-    && tar --strip-components=1 -xf /tmp/imagick.tar.gz \
-    && phpize \
-    && ./configure \
-    && make \
-    && make install \
-    && echo "extension=imagick.so" > /usr/local/etc/php/conf.d/ext-imagick.ini \
-    && rm -rf /tmp/*
-    # <<< End of Imagick installation
+# Update
+RUN apt-get -y update --fix-missing && \
+    apt-get upgrade -y && \
+    apt-get --no-install-recommends install -y apt-utils && \
+    rm -rf /var/lib/apt/lists/*
 
-# RUN pecl install imagick
-# RUN docker-php-ext-enable imagick
-RUN apt purge -y libmagickwand-dev
 
-WORKDIR /var/www/picu
+# Install useful tools and install important libaries
+RUN apt-get -y update && \
+    apt-get -y --no-install-recommends install nano wget \
+dialog \
+libsqlite3-dev \
+libsqlite3-0 && \
+    apt-get -y --no-install-recommends install default-mysql-client \
+zlib1g-dev \
+libzip-dev \
+libicu-dev && \
+    apt-get -y --no-install-recommends install --fix-missing apt-utils \
+build-essential \
+git \
+curl \
+libonig-dev && \
+    apt-get install -y iputils-ping && \
+    apt-get -y --no-install-recommends install --fix-missing libcurl4 \
+libcurl4-openssl-dev \
+zip \
+openssl && \
+    rm -rf /var/lib/apt/lists/* && \
+    curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+# Install imagick
+RUN apt-get update && \
+    apt-get -y --no-install-recommends install --fix-missing libmagickwand-dev && \
+    rm -rf /var/lib/apt/lists/*
+
+# Imagick Commit to install
+# https://github.com/Imagick/imagick
+ARG IMAGICK_COMMIT="28f27044e435a2b203e32675e942eb8de620ee58"
+
+RUN cd /usr/local/src && \
+    git clone https://github.com/Imagick/imagick && \
+    cd imagick && \
+    git checkout ${IMAGICK_COMMIT} && \
+    phpize && \
+    ./configure && \
+    make && \
+    make install && \
+    cd .. && \
+    rm -rf imagick && \
+    docker-php-ext-enable imagick
+
+# Other PHP8 Extensions
+RUN docker-php-ext-install pdo_mysql && \
+    docker-php-ext-install pdo_sqlite && \
+    docker-php-ext-install bcmath && \
+    docker-php-ext-install mysqli && \
+    docker-php-ext-install curl && \
+    docker-php-ext-install zip && \
+    docker-php-ext-install -j$(nproc) intl && \
+    docker-php-ext-install mbstring && \
+    docker-php-ext-install gettext && \
+    docker-php-ext-install calendar && \
+    docker-php-ext-install exif
+
+
+# Install Freetype
+RUN apt-get -y update && \
+    apt-get --no-install-recommends install -y libfreetype6-dev \
+libjpeg62-turbo-dev \
+libpng-dev && \
+    rm -rf /var/lib/apt/lists/* && \
+    docker-php-ext-configure gd --enable-gd --with-freetype --with-jpeg && \
+    docker-php-ext-install gd
+
+# Insure an SSL directory exists
+RUN mkdir -p /etc/apache2/ssl
+
+# Enable SSL support
+RUN a2enmod ssl && a2enmod rewrite
+
+# Enable apache modules
+RUN a2enmod rewrite headers
+
+# Cleanup
+RUN rm -rf /usr/src/*
