replace placeholder, add placeholder twig function, fix safe file rename

--- a/src/.env.example
+++ b/src/.env.example
@@ -23,17 +23,20 @@ API_TOKEN=
 FLICKR_ENABLED=false
 FLICKR_KEY=
 FLICKR_SECRET=
-FLICKR_PERMISSION=write
-FLICKR_IMPORT_MAX=1000
+FLICKR_PERMISSION=read
 
 # Local directory
 DISK_ENABLED=false
-DISK_GALLERY_PATH=/media/gallery
-DISK_CACHE_PATH=/media/cache
-DISK_IMPORT_MAX=250
+# From web root
+DISK_GALLERY_PATH=/gallery
+# From BASE_PATH
+DISK_CACHE_PATH=/media
 
 # Download
 CURL_REFERER="https://sookoll.ee"
+
+# Image placeholder
+IMG_PLACEHOLDER="https://placehold.co/%1$dx%2$d/%3$s/%4$s?font=lato&text=%5$s"
 
 # Database
 DB_HOST=
