Fix some docker related things, update README and add migration commands to composer scripts

--- a/src/.env.example
+++ b/src/.env.example
@@ -14,6 +14,7 @@ LOCALE=""
 LOCALE_FALLBACK=""
 
 ADMIN_USER=
+# encoded passwork, use /admin/hash/<pwd> to generate one
 ADMIN_PASS=
 
 # Security key for request private albums
@@ -31,6 +32,8 @@ DISK_ENABLED=false
 DISK_GALLERY_PATH=/gallery
 # From BASE_PATH
 DISK_CACHE_PATH=/media
+# Allow larger thumbs
+DISK_ALLOW_LARGER_THUMBNAIL=true
 
 # Download
 CURL_REFERER="https://sookoll.ee"
